src/scss/base/style.scss
/* ... */
.expression__hybrid-word--click-indicator {
  border-bottom-style: dashed;
}


/* sentence indicator: sentence should be tested */
.expression__hybrid-word--sentence-indicator {
  color: var(--accent);
  border-color: var(--accent);
}
/* word indicator: only the word should be tested */
.expression__hybrid-word--word-indicator {
  border-color: var(--text-color--3);
}


///* experimental vertical-display support, moves borders to left */
//.card-wrapper--vertical-display {
//  .expression__hybrid-word--hover-indicator {
//    border-bottom-style: none;
//    border-left-style: dotted;
//  }
//  .expression__hybrid-word--click-indicator {
//    border-bottom-style: none;
//    border-left-style: dashed;
//  }
//}


/* used to specify that hovering toggles between word/sentence */
.expression__hybrid-sentence {
  display: none;
}

/*
  inline block is so the div doesn't expand all the way to the left/right
  (i.e. so the border underneath the word doesn't expand)
 */
.expression__hybrid--hover.expression__hybrid--hint .expression__hybrid-word {
  display: inline-block;
}

/* hover behavior for non-hint cards */
.expression__hybrid--hover:not(.expression__hybrid--hint):hover {
  > .expression__hybrid-word {
    display: none;
  }
  > .expression__hybrid-sentence {
    display: block;
  }
}

/* hover behavior for hint cards */
.expression__hybrid--hover.expression__hybrid--hint {
  // explicitly only words when hovering over the word
  > .expression__hybrid-word:hover + .expression__hybrid-sentence {
    display: block;
  }
}

.hybrid-click-toggle:checked + .expression__hybrid .expression__hybrid-word {
  display: none;
}
.hybrid-click-toggle:checked + .expression__hybrid .expression__hybrid-sentence {
  display: block;
}
.hybrid-click-toggle:checked + .expression__hybrid.expression__hybrid--hint .expression__hybrid-word {
  display: inline-block;
}

/*
  - inline block is so the div doesn't expand all the way to the left/right
    (i.e. so the border underneath the word doesn't expand)
 */
.expression__hybrid--hover.expression__hybrid--hint .expression__hybrid-word {
  display: inline-block;
}



.sentence-quote {
}

/*
 * formats the open quote to be to the left of the entire text box
 */
.sentence-quote--open {
}

.sentence-quote--close {
}



.popup-menu {
  position: fixed;

  /* bless flex boxes */
  display: flex;
  align-items: center; /* Vertical center alignment */
  justify-content: center; /* Horizontal center alignment */
  flex-direction: column;
  row-gap: 3px;

  bottom: 30px;
  right: 30px;

  z-index: 30;
}

.popup-menu--animate {
  display: flex;
  align-items: center; /* Vertical center alignment */
  justify-content: center; /* Horizontal center alignment */

  width: 250px;
  min-height: 65px;
  text-align: center;
  padding: 10px;

  border-radius: 4px;
  background-color: var(--tooltip-background-darken);

  animation-name: popup-menu-in, popup-menu-stay, popup-menu-fade;
  animation-delay: 0s, 0.6s, 3.6s;
  animation-duration: 0.6s, 3s, 0.75s;
  opacity: 0;
}



@keyframes popup-menu-in {
  from {
    transform: translateY(20px);
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes popup-menu-stay {
  from {
    opacity: 1;
  }
  to {
    opacity: 1;
  }
}


@keyframes popup-menu-fade {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}





/*
 * --------------
 *  Mobile Popup
 * --------------
 */

.mobile-popup-wrapper {
  position: fixed;
  display: flex;
  height: calc(50vh);
  width: calc(100%);
  bottom: 0;
  left: 0;
  z-index: 10;
}


.mobile-popup {
  text-align: left;
  margin: auto;
  max-height: calc(100% - 2 * var(--mobile-popup-border));
  width: calc(100% - 2 * var(--mobile-popup-border));
  background-color: var(--tooltip-background-darken);
  bottom: var(--mobile-popup-border);
  left: var(--mobile-popup-border);

  border-radius: 6px;
  overflow: scroll;
  padding: 8px 10px 8px 10px;
}

:root:not(.mobile) .mobile-popup::-webkit-scrollbar {
  /* removes ugly scrollbar on PC */
  display: none;
}


/* close button + press animations */
.mobile-popup-title-close {
  height: 1.2em;
  position: sticky;
  display: flex;
  float: right;
  top: 0px;
  user-select: none;
}

.mobile-popup-title-close:not(.THIS-CLASS-DOES-NOT-EXIST) { /* temporary hack for minimalist mode */
  /* we have a backdrop-filter blur because I have no idea how to get rid of background text otherwise */
  backdrop-filter: blur(1.2px) !important; /* !important for minimalist mode */
  border-radius: 3px;
}

.mobile-popup-title-close svg {
  height: 1.2em;
  fill: var(--text-color);
  position: sticky;
}

.mobile-popup-title-close:active {
  box-shadow: 0px 0px 2px var(--text-color--2) !important; /* !important for minimalist mode */
}

.mobile-popup-title-close:active svg {
  margin-top: 1px;
}




// looks like microsoft XP style...
//.mobile-popup-title-close:not(.CLASS-DOES-NOT-EXIST) { /* hack for non-fancy display... */
//  backdrop-filter: blur(5px) !important;
//  box-shadow: 1px 1px 1.5px var(--text-color--4) !important;
//}
//
//.mobile-popup-title-close svg {
//  height: 1.2em;
//  fill: var(--text-color);
//  position: sticky;
//}
//
//.mobile-popup-title-close:active {
//    box-shadow: 0px 0px 1px var(--text-color--4) !important;
//}
//
//.mobile-popup-title-close svg {
//  margin-right: 0px;
//}
//.mobile-popup-title-close:active svg {
//  margin-top: 1px;
//  margin-right: -1px;
//  margin-left: 1px;
//}


/*
 *  ===============
 *   BACK SIDE CSS
 *  ===============
 */


/*
 * adds a width constraint to the backside to make things look better
 * - only applied after the main definition header
 */
.back-side-restrict-width {
  max-width: common.$bp-max-width-backside;
  margin: auto;
  padding: 0px;

  display: flex;
  flex-direction: column;
}

.answer-border {
  border-bottom: 1px solid;
  margin-top: 10px;
  margin-bottom: 15px;
  width: min(90% + 5rem, 100%);
}
/* ... */

